Remove dependency